[tool.poetry]
name = "rctab-infrastructure"
version = "0.1.0"
description = "Azure deployment code"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
pulumi-azure-native = "^2.1.1"
pulumi = "^3.72.2"
pulumi-random = "^4.13.1"
pulumi-postgresql = "^3.8.0"
pulumi-tls = "^4.10.0"
sphinx = {version = "^7.2.6", optional = true}
sphinx-rtd-theme = {version = "^1.3.0", optional = true}
sphinxcontrib-napoleon = {version = "^0.7", optional = true}
myst-parser = {version = "^2.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.315"
isort = "^5.12.0"
pylint = "^2.17.4"
black = "^23.3.0"
safety = "^2.3.5"
pre-commit = "^3.3.3"
pydocstyle = "^6.3.0"
pymarkdownlnt = "^0.9.11"
pylint-absolute-imports = "^1.0.1"

[tool.poetry.extras]
docs = ["sphinx-rtd-theme", "sphinxcontrib-napoleon", "myst-parser", "sphinx"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
